Moved _sidebar.md into docsify/sidebar.md.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script>
   window.$docsify = {
     name: 'pino',
-    loadSidebar: true,
+    loadSidebar: 'docsify/sidebar.md',
     repo: 'https://github.com/pinojs/pino',
     auto2top: true
   }
