--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     name: 'pino',
     loadSidebar: 'docsify/sidebar.md',
     repo: 'https://github.com/pinojs/pino',
-    auto2top: true
+    auto2top: true,
+    ga: 'UA-103155139-1'
   }
 </script>
 <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
 <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
+<script src="//unpkg.com/docsify/lib/plugins/ga.min.js"></script>
 </html>
