--- a/index.html
+++ b/index.html
@@ -5,14 +5,35 @@
   <title>Pino - Super fast, all natural JSON logger for Node.js</title>
   <meta name="description" content="Super fast, all natural JSON logger for Node.js">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
+  <link rel="stylesheet" href="//unpkg.com/docsify-themeable/dist/css/theme-simple.css">
+  <style>
+    :root {
+      --base-font-size: 16px;
+      --theme-color: rgb(104, 118, 52);
+      --link-color:  rgb(104, 118, 52);
+      --link-color--hover: rgb(137, 152, 100);
+      --sidebar-name-margin: 0;
+      --sidebar-name-padding: 0;
+      --code-font-size: .9em;
+    }
+    .sidebar > h1 {
+      margin-bottom: -.75em;
+      margin-top: .75em;
+    }
+    .markdown-section a code {
+      color: var(--link-color)!important;
+    }
+    .markdown-section code:not([class*="lang-"]):not([class*="language-"]) {
+      white-space: unset
+    }
+  </style>
 </head>
 <body>
   <div id="app"></div>
 </body>
 <script>
   window.$docsify = {
-    name: 'pino',
+    name: '<img src=pino-tree.png style="height:4em;"><div style="margin-top:-.65em">pino</div>',
     loadSidebar: 'docsify/sidebar.md',
     repo: 'https://github.com/pinojs/pino',
     auto2top: true,
@@ -22,4 +43,5 @@
 <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
 <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
 <script src="//unpkg.com/docsify/lib/plugins/ga.min.js"></script>
+
 </html>
