docs: fix logo display in sidebar

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       margin-bottom: -.75em;
       margin-top: .75em;
     }
+    .sidebar > h1 img {
+      height: 4em;
+    }
     .markdown-section a code {
       color: var(--link-color)!important;
     }
@@ -33,7 +36,8 @@
 </body>
 <script>
   window.$docsify = {
-    name: '<img src=pino-tree.png style="height:4em;"><div style="margin-top:-.65em">pino</div>',
+    name: 'pino',
+    logo: './pino-tree.png',
     loadSidebar: 'docsify/sidebar.md',
     repo: 'https://github.com/pinojs/pino',
     auto2top: true,
