Replacing var with let/const, somewhere left var because scope, somewhere left var because for + resolved all standard issues

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       height: 4em;
     }
     .markdown-section a code {
-      color: var(--link-color)!important;
+      color: const(--link-color)!important;
     }
     .markdown-section code:not([class*="lang-"]):not([class*="language-"]) {
       white-space: unset
