--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       height: 4em;
     }
     .markdown-section a code {
-      color: const(--link-color)!important;
+      color: var(--link-color)!important;
     }
     .markdown-section code:not([class*="lang-"]):not([class*="language-"]) {
       white-space: unset
