Add Pino tree as favicon

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       white-space: unset
     }
   </style>
+  <link rel="shortcut icon" type="image/png" href="pino-tree.png">
 </head>
 <body>
   <div id="app"></div>
