Docs: add favicon (#1698)
* Add Pino tree as favicon

* Add icon files

Generated with realfavicongenerator.net

* Update index.html

Code generated from realfavicongenerator.net

* Remove reference to manifest

This isn't a PWA, so doesn't make sense to have a manifest right?

* Delete site.webmanifest

See last commit, don't think it's necessary.

* Make favicon reference relative

So it works with GitHub pages

* Remove references to all but the basic favicons

* Remove extra files

I don't really have a way to test these so I'll stick to the basics

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       white-space: unset
     }
   </style>
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 </head>
 <body>
   <div id="app"></div>
